stage-3-kubernetes/scrob-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrob
spec:
  replicas: 1

  selector:
    matchLabels:
      app: scrob

  template:
    metadata:
      labels:
        app: scrob

    spec:
      enableServiceLinks: false
      
      containers:
        - name: scrob
          image: bellamy/scrob:latest

          ports:
            - containerPort: 7330
              protocol: TCP

          volumeMounts:
            - name: scrob-data
              mountPath: /app/backend/data

      volumes:
        - name: scrob-data
          persistentVolumeClaim:
            claimName: scrob-pvc
