stage-3-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrob-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: scrob.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrob
                port:
                  number: 7330
